src/test/deca/syntax/invalid/non_provided/bad_plus.deca
// Description:
//    Programme minimaliste avec erreur lors de l'opération
//    arithmétique plus '+'
//
// Resultats:
//    Erreur
//
// Historique:
//    cree le 11/01/2020

{
    int a;
    a = 1 + ;
}